--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=BackEndTodoList
 
-spring.data.mongodb.uri= mongodb+srv://naymaisa:nayara1234@cluster0.zq4lbjk.mongodb.net/todo_db?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri= mongodb+srv://naymaisa:<senha>@cluster0.zq4lbjk.mongodb.net/todo_db?retryWrites=true&w=majority&appName=Cluster0
